# advent-of-code

./: .gitignore  README.md  pyproject.toml  ruff.toml
.template/: template.py
2023/dag_1/: dag_1.py
2023/dag_2/: day_2.py
2024/dag_1/: dag_1.py
2024/dag_10/: dag_10.py
2024/dag_11/: dag_11.py
2024/dag_12/: dag_12.py
2024/dag_13/: dag_13.py
2024/dag_14/: dag_14.py
2024/dag_15/: dag_15.py
2024/dag_16/: dag_16.py
2024/dag_17/: dag_17.py
2024/dag_18/: dag_18.py
2024/dag_19/: dag_19.py
2024/dag_2/: dag_2.py
2024/dag_3/: dag_3.py
2024/dag_4/: dag_4.py
2024/dag_5/: dag_5.py
2024/dag_6/: dag_6.py
2024/dag_7/: dag_7.py
2024/dag_8/: dag_8.py
2024/dag_9/: dag_9.py
2025/dag_1/: dag_1.py
2025/dag_10/: dag_10.py
2025/dag_11/: dag_11.py
2025/dag_12/: dag_12.py
2025/dag_2/: dag_2.py
2025/dag_3/: dag_3.py
2025/dag_4/: dag_4.py
2025/dag_5/: dag_5.py
2025/dag_6/: dag_6.py
2025/dag_7/: dag_7.py
2025/dag_8/: dag_8.py
2025/dag_9/: dag_9.py
