[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "Niek van Leeuwen", email = "ik@niekvanleeuwen.nl" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "click>=8.3.1",
    "networkx>=3.6.1",
    "ortools>=9.14.6206",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1,<0.9",
    "pre-commit>=4.0.1,<5",
]
